# polkadot-rewards

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
cryptowatch/: Cargo.toml  README.md
cryptowatch/data/assets/: details.json  list.json
cryptowatch/data/exchanges/: details.json  list.json  markets.json
cryptowatch/data/markets/: 24h-summary.json  details.json  list.json  ohlc.json  orderbook-calculator.json  orderbook-liquidity.json  orderbook.json  price-all.json  price.json  trades.json
cryptowatch/data/pairs/: details.json
cryptowatch/scripts/: refresh_test_data.sh
cryptowatch/src/: api.rs  client.rs  error.rs  impls.rs  lib.rs  tests.rs  types.rs
cryptowatch/src/api/: assets.rs  error.rs  pairs.rs  params.rs  traits.rs
cryptowatch/src/api/assets/: details.rs  list.rs  pairs.rs
cryptowatch/src/api/markets/: list.rs
cryptowatch/src/api/pairs/: details.rs  list.rs
cryptowatch/src/client/: assets.rs  rest_client.rs
cryptowatch/src/impls/: assets.rs  exchanges.rs  markets.rs  pairs.rs
cryptowatch/src/tests/: client.rs
cryptowatch/src/types/: assets.rs  exchanges.rs  impls.rs  markets.rs  pairs.rs
cryptowatch/src/types/impls/: exchanges.rs  markets.rs  pairs.rs
polkadot-rewards/: Cargo.toml
polkadot-rewards/src/: api.rs  cli.rs  primitives.rs
src/: api.rs  cli.rs  main.rs  primitives.rs
