[package]
name = "polkadot-rewards"
version = "0.3.0"
authors = ["Andrew Plaza <andrew.plaza@parity.io>"]
edition = "2018"
description = "Handy CLI for all your Polkadot ecosystem staking rewards needs."
readme = "README.md"
homepage = "https://github.com/insipx/polkadot-rewards"
repository = "https://github.com/insipx/polkadot-rewards"
license = "MIT"
license-file = "LICENSE"
keywords = ["cli", "polkadot", "moonriver", "kusama", "substrate", "staking", "rewards"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argh = "0.1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
log = "0.4"
indicatif = "0.16"
sp-arithmetic = "3"
cli-table = "0.4.6"
