[package]
name = "cryptowatch"
version = "0.1.0"
edition = "2021"
description = "Client for the cryptowat.ch API"
readme = "README.md"
homepage = "https://github.com/insipx/polkadot-rewards/cryptowatch"
repository = "https://github.com/insipx/polkadot-rewards"
license = "MIT"
keywords = ["api", "cryptocurrency"]
categories = ["api"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
serde-aux = "4.1.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
envy = "0.4.2"
once_cell = "1.16"

[dev-dependencies]
assert_ok = "1"
