[package]
name = "cryptowatch"
version = "0.1.0"
edition = "2021"
description = "Client for the cryptowat.ch API"
readme = "README.md"
homepage = "https://github.com/insipx/polkadot-rewards/cryptowatch"
repository = "https://github.com/insipx/polkadot-rewards"
license = "MIT"
keywords = ["api", "cryptocurrency"]
categories = ["api"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
serde-aux = "4.1.2"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
http = "0.2.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
envy = "0.4.2"
derive_builder = "0.12.0"
url = "2.3"
bytes = "1.3"
once_cell = "1.16"
futures = "0.3"

[dev-dependencies]
assert_ok = "1"
tokio-test = "0.4"
